removed redundant ProductCollection